--- a/scss/basic_information_section.scss
+++ b/scss/basic_information_section.scss
@@ -207,20 +207,22 @@ div#basic_information_wrapper {
       top: 28rem;
       z-index: 1;
       div.info {
-        width: calc(50% - 30px);
+        width: calc(60% - 30px);
         height: 33rem;
+        padding: 30px;
         position: absolute;
         left: 0;
-        top: 0;
+        top: 4rem;
         ul.info_list {
           display: flex;
           flex-wrap: wrap;
           flex-direction: row;
           justify-content: flex-start;
           align-content: center;
-          gap: 3rem;
+          gap: 0rem;
           li {
-            width: 100%;
+            width: 47%;
+            margin-bottom: 6rem;
             &:hover p.title::before {
               transform: scale(1.2);
             }
@@ -352,20 +354,24 @@ div#basic_information_wrapper {
         width: 100%;
         margin: 0 auto;
         height: 33rem;
+        padding: 0px;
         position: absolute;
-        left: -1.3rem;
-        top: 17rem;
+        left: 0rem;
+        top: 27rem;
         ul.info_list {
-          width: 80vw;
+          padding: 30;
+          width: calc(100% - 30px);
           margin: 0 auto;
           display: flex;
           flex-wrap: wrap;
           flex-direction: row;
           justify-content: flex-start;
           align-content: center;
-          gap: 3rem;
+          gap: 0rem;
+          margin-left: 50px;
           li {
             width: 50%;
+            margin-bottom: 6rem;
             &:hover p.title::before {
               transform: scale(1.2);
             }
@@ -413,7 +419,7 @@ div#basic_information_wrapper {
         height: 132.66vw;
         position: absolute;
         left: 5vw;
-        top: -18rem;
+        top: -13rem;
         img {
           width: 90vw;
           margin: 0 auto;
