--- a/scss/skills_stacks_section.scss
+++ b/scss/skills_stacks_section.scss
@@ -110,8 +110,24 @@ div.etc_skills_wrap {
   }
 }
 
+@media screen and (max-width: 1260px) {
+  div#skills_and_stacks_wrapper {
+    padding: 0 30px;
+    box-sizing: border-box;
+  }
+  div.front_end_skills_wrap {
+    ul.front_end_skill_list {
+      width: calc(100vw - 60px);
+      gap: 2rem;
+    }
+  }
+}
+
+
+
 @media screen and (max-width: 768px) {
   div#skills_and_stacks_wrapper {
+    padding: 0;
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
@@ -150,90 +166,92 @@ div.etc_skills_wrap {
     position: relative;
     right: 0;
     top: 0;
-  p.skill_category {
-    padding: 5rem 3.5rem 0 0;
-    position: relative;
-  }
-  svg {
-    position: relative;
-    right: 1.5rem;
-    top: -2.4rem;
-  }
-  ul.front_end_skill_list {
-    max-width: 55rem;
-    width: 100vw;
-    height: 33rem;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
-    align-content: flex-start;
-    gap: 0rem;
-    position: absolute;
-    right: 0;
-    top: 10rem;
-    li {
-      max-width: 15rem;
-      width: 30vw;
-      max-height: 15rem;
-      height: 30vw;
-      margin-bottom: 1rem;
-      border-radius: 1.75rem;
-      background: linear-gradient(138deg, #003CFF 20%, #013DFE 62%, #F90 96.37%);
-      background-position: 0% 0%;
-      background-size: 150% 150%;
-      // background: #003CFF;
-      box-shadow: 1px 1px px 3px rgba(0, 0, 0, 0.25);
-      box-sizing: border-box;
+    p.skill_category {
+      padding: 5rem 3.5rem 0 0;
+      position: relative;
+    }
+    svg {
+      position: relative;
+      right: 1.5rem;
+      top: -2.4rem;
+    }
+    ul.front_end_skill_list {
+      width: calc(100% - 7px);
+      height: 33rem;
       display: flex;
       flex-wrap: wrap;
       flex-direction: row;
-      justify-content: center;
-      align-content: center;
-      transition: all 0.5s ease;
-      &:hover {
-        box-shadow: 3px 3px 6px 4px rgba(0, 0, 0, 0.35);
-        background-position: 100% 100%;
-      }
-      &:touch-action {
-        box-shadow: 4px 4px 12px 3px rgba(0, 0, 0, 0.25);
-        background-position: 100% 100%;
-      }     
-      p {
-        color: white;
-        font: normal 5vw "Noto sans KR";
-        text-align: left;
-        cursor: default;
-      }
-      &:nth-child(4) {
+      justify-content: flex-start;
+      align-content: flex-start;
+      gap: 3%;
+      position: absolute;
+      right: 0;
+      top: 10rem;
+      li {
+        max-width: 15rem;
+        width: 30vw;
+        max-height: 15rem;
+        height: 30vw;
+        margin-bottom: 1rem;
+        border-radius: 1.75rem;
+        background: linear-gradient(138deg, #003CFF 20%, #013DFE 62%, #F90 96.37%);
+        background-position: 0% 0%;
+        background-size: 150% 150%;
+        // background: #003CFF;
+        box-shadow: 1px 1px px 3px rgba(0, 0, 0, 0.25);
+        box-sizing: border-box;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        transition: all 0.5s ease;
+        &:hover {
+          box-shadow: 3px 3px 6px 4px rgba(0, 0, 0, 0.35);
+          background-position: 100% 100%;
+        }
+        &:touch-action {
+          box-shadow: 4px 4px 12px 3px rgba(0, 0, 0, 0.25);
+          background-position: 100% 100%;
+        }
         p {
-          font-size: 4vw;
+          color: white;
+          font: normal 4vw "Noto sans KR";
+          text-align: left;
+          cursor: default;
+        }
+        &:nth-child(4) {
+          p {
+            font-size: 3.4vw;
+          }
         }
       }
     }
   }
-}
 
-// 나머지 스킬
-div.etc_skills_wrap {
-  max-width: 55rem;
-  height: auto;
-  position: relative;
-  left: 0;
-  top: 0;
-  ul.etc_skill_list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-content: center;
-    gap: 10rem;
-    li {
-      p.skill_name {
-        color: black;
-        font: normal 1.1rem/2rem "Noto sans KR";
+  // 나머지 스킬
+  div.etc_skills_wrap {
+    max-width: 55rem;
+    height: auto;
+    position: relative;
+    left: 0;
+    top: 0;
+    padding: 0 30px;
+    ul.etc_skill_list {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-content: center;
+      gap: 1rem;
+      li {
+        width: 45%;
+        margin-bottom: 70px;
+        p.skill_name {
+          color: black;
+          font: normal 1.1rem/2rem "Noto sans KR";
+        }
       }
     }
   }
-}
 }
