--- a/scss/about_me_section.scss
+++ b/scss/about_me_section.scss
@@ -277,3 +277,22 @@ div.am_bgs {
     }
   }
 }
+
+
+@media screen and (max-width: 425px) {
+  div#about_me_wrapper {
+
+
+    .title_wrap {
+      width: 18rem;
+      height: auto;
+      text-align: left;
+      margin-top: 6rem;
+
+      svg {
+        width: 220px;
+      }
+
+    }
+  }
+}
