--- a/scss/basic_information_section.scss
+++ b/scss/basic_information_section.scss
@@ -66,7 +66,7 @@ div#basic_information_wrapper {
           }
           p.text {
             color: white;
-            font: normal 1.2rem "Noto sans KR";
+            font: normal 1.2rem/1.9rem "Noto sans KR";
             margin-top: 1rem;
             span {
               transition: all 0.1s ease-out;
