--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -24,9 +24,12 @@ div.project_orange_stage_wrapper {
     height: 46.2rem;
     padding-top: 14rem;
     margin: 0 auto;
-    border: solid 2px blue;
-    box-sizing: border-box;
     @extend %positionRelative;
+    @media screen and (max-width: 1260px) {
+      padding: 0 30px;
+    }
+    
+    box-sizing: border-box;
   }
 }
 
@@ -99,7 +102,8 @@ div.project_view_wrapper {
         flex-direction: row;
         justify-content: flex-start;
         align-content: center;
-        gap: 2rem;   
+        border: solid 2px palevioletred;
+        box-sizing: border-box;
         li {
           width: 13rem;
           height: 2.5rem;
@@ -109,12 +113,15 @@ div.project_view_wrapper {
           color: black;
           font: normal 1.2rem/2.5rem "Noto sans KR";
           transition: all 0.2s ease-out;
+          border-radius: 1rem;
+        }
+        a:first-child {
+          margin-right: 2rem;
         }
         a:hover li {
           background: #003CFF;
           cursor: pointer;
           transform: scale(1.05);
-          border-radius: 1rem;
           color: white;
         }
       }
@@ -130,28 +137,7 @@ div.projects_list_wrapper {
   div.projects_list {
     width: 100%;
     height: 40rem;
-    ul {
-      width: 2000px;
-      height: auto;
-      margin-top: 4.5rem;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-content: center;
-      gap: 4rem;
-      li {
-        width: 25rem;
-        height: 19rem;
-        background: #FFF;
-        box-shadow: 4px 4px 10px 4px rgba(0, 0, 0, 0.15);
-        &.selected {
-          border: 10px solid #F90;
-          transform: translateY(-10px);
-          box-shadow: none;
-        }
-      }
-    }
+    
   }
 }
 
