--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -68,23 +68,24 @@ div.project_view_wrapper {
   box-sizing: border-box;
 }
 div.project_view_wrapper div.project_main_pic {
-  width: 25rem;
+  width: 31rem;
   height: 19rem;
   background: white;
   float: left;
-  border: solid 2px green;
-  box-sizing: border-box;
 }
 div.project_view_wrapper div.project_main_pic img {
   width: 100%;
   height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 div.project_view_wrapper div.project_infos {
-  width: calc(100% - 31rem);
+  width: calc(100% - 34rem);
   height: 17rem;
-  margin: 1rem 3rem;
+  margin-left: 3rem;
+  margin-top: 1rem;
+  border: solid 2px palevioletred;
+  box-sizing: border-box;
   float: left;
 }
 div.project_view_wrapper div.project_infos .p_name {
@@ -117,6 +118,10 @@ div.project_view_wrapper div.project_infos div.projects_skill ul li {
   box-sizing: border-box;
   color: rgb(255, 255, 255);
   font: normal 1rem "Noto sans KR";
+  transition: all 0.1s ease-out;
+}
+div.project_view_wrapper div.project_infos div.projects_skill ul li:hover {
+  background: rgba(255, 255, 255, 0.3);
 }
 div.project_view_wrapper div.project_infos div.project_links {
   position: absolute;
@@ -129,12 +134,11 @@ div.project_view_wrapper div.project_infos div.project_links ul {
   flex-direction: row;
   justify-content: flex-start;
   align-content: center;
-  border: solid 2px palevioletred;
-  box-sizing: border-box;
 }
 div.project_view_wrapper div.project_infos div.project_links ul li {
-  width: 13rem;
+  width: auto;
   height: 2.5rem;
+  padding: 0 2rem;
   margin: 0 auto;
   background: white;
   text-align: center;
@@ -157,9 +161,81 @@ div.projects_list_wrapper {
   border: solid 2px palevioletred;
   box-sizing: border-box;
 }
-div.projects_list_wrapper div.projects_list {
+div.projects_list_wrapper div.projects_list_container {
   width: 100%;
-  height: 40rem;
+  height: auto;
+  overflow: hidden;
+}
+
+ul.project_list {
+  width: 112rem;
+  height: 30rem;
+  margin-top: 4.5rem;
+  position: relative;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: flex-start;
+}
+ul.project_list li {
+  width: 25rem;
+  height: 15.45rem;
+  box-shadow: 4px 4px 16px 5px rgba(0, 0, 0, 0.2);
+  margin-right: 3rem;
+  filter: brightness(0.5) grayscale(0.9);
+  cursor: pointer;
+}
+ul.project_list li.selected {
+  box-shadow: 0 0 0 10px #FF9900 inset;
+  filter: brightness(1) grayscale(0);
+}
+ul.project_list li:nth-child(1) {
+  background: url("/images/project-01-main.png") center center no-repeat;
+  background-size: contain;
+}
+ul.project_list li:nth-child(2) {
+  background: url("/images/project-02-main.png") center center no-repeat;
+  background-size: contain;
+}
+ul.project_list li:nth-child(3) {
+  background: url("/images/project-03-main.png") center center no-repeat;
+  background-size: contain;
+}
+ul.project_list li:nth-child(4) {
+  background: url("/images/project-04-main.png") center center no-repeat;
+  background-size: contain;
+}
+
+div.list_navigation {
+  width: 100vw;
+  height: 5rem;
+  position: absolute;
+  left: 0;
+  top: 56rem;
+  z-index: 10;
+  border: solid 2px palevioletred;
+  box-sizing: border-box;
+}
+div.list_navigation .button-prev {
+  position: absolute;
+  left: 30px;
+  top: 0;
+  z-index: 10;
+}
+div.list_navigation .button-next {
+  position: absolute;
+  right: 40px;
+  top: 0;
+  z-index: 10;
+}
+div.list_navigation i {
+  font-size: 5rem;
+  color: #FF9900;
+  cursor: pointer;
 }
 
 div.pj_bg_text {
