--- a/scss/skills_stacks_section.scss
+++ b/scss/skills_stacks_section.scss
@@ -110,6 +110,20 @@ div.etc_skills_wrap {
   }
 }
 
+// bg
+div.ss_bg {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  left: -22rem;
+  top: 0;
+  z-index: -1;
+  img {
+    width: 35rem;
+    height: 35rem;
+  }
+}
+
 @media screen and (max-width: 1260px) {
   div#skills_and_stacks_wrapper {
     padding: 0 30px;
