--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -85,13 +85,20 @@ div.project_main_pic {
   left: 0;
   top: 0;
 }
+div.project_main_pic:hover > img {
+  filter: blur(1px);
+}
+div.project_main_pic:hover .mouseover > img {
+  opacity: 1;
+  cursor: pointer;
+}
 @media screen and (max-width: 768px) {
   div.project_main_pic {
     width: 100%;
     height: auto;
   }
 }
-div.project_main_pic img {
+div.project_main_pic > img {
   width: 100%;
   height: 100%;
   position: relative;
@@ -100,23 +107,15 @@ div.project_main_pic img {
   -o-object-fit: cover;
      object-fit: cover;
   display: block;
-  transition: all 0.2s ease-out;
+  transition: all 0.3s ease-out;
 }
-div.project_main_pic img:hover {
-  filter: blur(1px);
-  cursor: pointer;
-}
-div.project_main_pic img:hover .mouseover {
+div.project_main_pic .mouseover > img {
   width: 100%;
   height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
   position: absolute;
   left: 0;
   top: 0;
-  background: url(/images/more.png) center center no-repeat;
-  background-size: contain;
-  opacity: 0.9;
+  opacity: 0;
 }
 
 div.project_infos {
