--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -32,7 +32,6 @@ div.project_orange_stage_wrapper {
       padding: 8rem 30px 0 30px;
     }
     
-    
     box-sizing: border-box;
   }
 }
@@ -56,11 +55,18 @@ div.project_main_pic {
   position: relative;
   left: 0;
   top: 0;
+  &:hover > img {
+    filter: blur(1px);
+  }
+  &:hover .mouseover > img {
+    opacity: 1;
+    cursor: pointer;
+  }
   @media screen and (max-width: 768px) {
     width: 100%;
     height: auto;
   }
-  img {
+  & > img {
     width: 100%;
     height: 100%;
     position: relative;
@@ -68,22 +74,16 @@ div.project_main_pic {
     top: 0;
     object-fit: cover;
     display: block;
-    transition: all 0.2s ease-out;
-    &:hover {
-      filter:blur(1px);
-      cursor: pointer;
-      .mouseover {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        position: absolute;
-        left: 0;
-        top: 0;
-        background: url(/images/more.png) center center no-repeat;
-        background-size: contain;
-        opacity: 0.9;
-      }
-    }
+    transition: all 0.3s ease-out;
+  }
+  .mouseover > img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    // transition: all 0.2s ease-out;
   }
 }
 
