--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -75,6 +75,18 @@ div.project_view_wrapper {
     margin-top: 4rem;
   }
 }
+div.project_view_wrapper .project_view {
+  width: 100%;
+  height: 19rem;
+  cursor: pointer;
+}
+div.project_view_wrapper .project_view :hover .project_main_pic > img {
+  filter: blur(1px);
+}
+div.project_view_wrapper .project_view > div {
+  width: 100%;
+  height: 19rem;
+}
 
 div.project_main_pic {
   width: 31rem;
@@ -115,7 +127,7 @@ div.project_main_pic .mouseover > img {
   position: absolute;
   left: 0;
   top: 0;
-  opacity: 0;
+  opacity: 1;
 }
 
 div.project_infos {
