--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -43,9 +43,20 @@ div.project_view_wrapper {
   @media screen and (max-width: 768px) {
     margin-top: 4rem;
   }
+  .project_view {
+    width: 100%;
+    height: 19rem;
+    cursor: pointer;
+    :hover .project_main_pic > img {
+      filter: blur(1px);
+    }
+    & > div {
+      width: 100%;
+      height: 19rem;
+    }
+  }
   
 }
-
 
 div.project_main_pic {
   width: 31rem;
@@ -76,14 +87,15 @@ div.project_main_pic {
     display: block;
     transition: all 0.3s ease-out;
   }
+
   .mouseover > img {
     width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
     top: 0;
-    opacity: 0;
-    // transition: all 0.2s ease-out;
+    opacity: 1;
+    // transition: all 0.3s ease-out;
   }
 }
 
