--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -439,6 +439,16 @@ button#ol_close_btn {
   overflow: hidden;
 }
 
+.detail_axios_wrapper {
+  width: auto;
+  height: auto;
+  position: relative;
+  left: 0;
+  top: 0;
+  border: solid 2px palevioletred;
+  box-sizing: border-box;
+}
+
 .detail-slider {
   width: 95%;
   position: relative;
