--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -440,7 +440,9 @@ button#ol_close_btn i {
   transform: translateX(-50%);
   bottom: 10px;
   padding: 15px 35px;
-  background: linear-gradient(147deg, #f90 0%, #003cff 74%);
+  background: linear-gradient(147deg, #f90 0%, #003cff 66%);
+  background-position: 0% 0%;
+  background-size: 200% 100%;
   box-shadow: 0px 14px 50px rgba(0, 65, 255, 0.4);
   color: #fff;
   font: 500 1rem "Noto sans KR";
@@ -448,12 +450,14 @@ button#ol_close_btn i {
   transition: all 0.2s ease-out;
 }
 .detail-slider__button:hover {
-  background: #003CFF;
+  background-position: 100% 100%;
   cursor: pointer;
 }
 @media screen and (max-width: 576px) {
   .detail-slider__button {
     width: 100%;
+    position: absolute;
+    bottom: -5rem;
   }
 }
 
@@ -468,16 +472,13 @@ button#ol_close_btn i {
   align-content: center;
 }
 
-.swiper-wrapper {
-  overflow: hidden;
-}
-
 .detail_axios_wrapper {
   width: auto;
   height: auto;
   position: relative;
   left: 0;
   top: 0;
+  z-index: 1000;
   border: solid 2px palevioletred;
   box-sizing: border-box;
 }
@@ -511,9 +512,11 @@ button#ol_close_btn i {
     width: 78%;
   }
 }
-@media screen and (max-height: 500px) and (min-width: 992px) {
+@media screen and (max-width: 576px) {
   .detail-slider {
-    height: 350px;
+    top: 0.5rem;
+    min-height: 390px;
+    height: 390px;
   }
 }
 .detail-slider__item {
@@ -601,7 +604,7 @@ button#ol_close_btn i {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
+  background-image: linear-gradient(147deg, rgba(255, 153, 0, 0.1) 0%, rgba(0, 60, 255, 0.1) 4%);
   border-radius: 20px;
   opacity: 0.8;
 }
@@ -653,8 +656,7 @@ button#ol_close_btn i {
 }
 @media screen and (max-width: 576px) {
   .detail-slider__content {
-    margin-top: -70px;
-    padding: 0 30px;
+    padding: 0 0px;
   }
 }
 .detail-slider__content > * {
