--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -409,7 +409,9 @@ button#ol_close_btn {
   bottom: 10px;
   padding: 15px 35px;
   // box-sizing: border-box;
-  background: linear-gradient(147deg, #f90 0%, #003cff 74%);
+  background: linear-gradient(147deg, #f90 0%, #003cff 66%);
+  background-position: 0% 0%;
+  background-size: 200% 100%;
 
   box-shadow: 0px 14px 50px rgba(0, 65, 255, 0.4);
   color: #fff;
@@ -417,11 +419,13 @@ button#ol_close_btn {
   letter-spacing: 1px;
   transition: all 0.2s ease-out;
   &:hover {
-    background: #003CFF;
+    background-position: 100% 100%;
     cursor: pointer;
   }
   @media screen and (max-width: 576px) {
     width: 100%;
+    position: absolute;
+    bottom: -5rem;
   }
 }
 
@@ -435,9 +439,6 @@ button#ol_close_btn {
   justify-content: space-around;
   align-content: center;
 }
-.swiper-wrapper {
-  overflow: hidden;
-}
 
 .detail_axios_wrapper {
   width: auto;
@@ -445,6 +446,7 @@ button#ol_close_btn {
   position: relative;
   left: 0;
   top: 0;
+  z-index: 1000;
   border: solid 2px palevioletred;
   box-sizing: border-box;
 }
@@ -476,8 +478,13 @@ button#ol_close_btn {
     text-align: center;
     width: 78%;
   }
-  @media screen and (max-height: 500px) and (min-width: 992px) {
-    height: 350px;
+  // @media screen and (max-height: 500px) and (min-width: 992px) {
+  //   height: 350px;
+  // }
+  @media screen and (max-width: 576px) {
+    top: 0.5rem;
+    min-height: 390px;
+    height: 390px;
   }
   &__item {
     display: flex;
@@ -529,7 +536,7 @@ button#ol_close_btn {
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
+      background-image: linear-gradient(147deg, rgba(255, 153, 0, 0.1) 0%, rgba(0, 60, 255, 0.1)4%);
       border-radius: 20px;
       opacity: 0.8;
     }
@@ -572,8 +579,7 @@ button#ol_close_btn {
       padding: 0 30px;
     }
     @media screen and (max-width: 576px) {
-      margin-top: -70px;
-      padding: 0 30px;
+      padding: 0 0px;
     }
     > * {
       opacity: 0;
