--- a/css/basic_information_section.css
+++ b/css/basic_information_section.css
@@ -448,7 +448,7 @@ span.heart::before {
     height: 132.66vw;
     position: absolute;
     left: 5vw;
-    top: -13rem;
+    top: -13rem !important;
   }
   div#basic_information_wrapper .infos_wrapper div.my_pic img {
     width: 90vw;
