--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -378,7 +378,7 @@ div.pj_bg_text #pbt_1 {
 #gray_layer {
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.8);
   position: fixed;
   left: 0;
   top: 0;
@@ -481,6 +481,10 @@ button#ol_close_btn i {
   z-index: 1000;
   border: solid 2px palevioletred;
   box-sizing: border-box;
+}
+
+.detail-slider {
+  overflow-x: unset;
 }
 
 .detail-slider {
