--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -343,7 +343,7 @@ div.pj_bg_text {
 #gray_layer {
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.8);
   position: fixed;
   left: 0;
   top: 0;
@@ -449,6 +449,9 @@ button#ol_close_btn {
   z-index: 1000;
   border: solid 2px palevioletred;
   box-sizing: border-box;
+}
+.detail-slider {
+  overflow-x:unset;
 }
 
 .detail-slider {
