--- a/scss/about_me_section.scss
+++ b/scss/about_me_section.scss
@@ -53,6 +53,7 @@ div.about_me_inner {
       }
     }
     #awards_list {
+      position: relative;
       li {
         position: relative;
         left: 40px;
