--- a/scss/skills_stacks_section.scss
+++ b/scss/skills_stacks_section.scss
@@ -8,6 +8,10 @@ div#skills_and_stacks_wrapper {
     #skill {
       color: black;
     }
+    .ss_title_svg {
+      // transform: scaleX(-1);
+      stroke-dasharray: 30;
+    }
   }
 }
 
