--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -284,12 +284,16 @@ ul.project_list {
 }
 
 div.list_navigation {
-  width: 100vw;
+  width: 100%;
   height: auto;
   position: absolute;
   left: 0;
   top: 56rem;
   z-index: 10;
+  @media screen and (max-width: 1200px) {
+    width: 100vw;
+  }
+  
   @media screen and (max-width: 768px) {
     top: 71.5rem;
   }
@@ -297,9 +301,12 @@ div.list_navigation {
   .button-prev {
     height: 5rem;
     position: absolute;
-    left: 30px;
+    left: 250px;
     top: 0;
     z-index: 10;
+    @media screen and (max-width: 1800px) {
+      left: 30px;
+    }
     @media screen and (max-width: 768px) {
       left: 10px;
     }
@@ -307,9 +314,12 @@ div.list_navigation {
   .button-next {
     height: 5rem;
     position: absolute;
-    right: 40px;
+    right: 250px;
     top: 0;
     z-index: 10;
+    @media screen and (max-width: 1800px) {
+      right: 30px;
+    }
     @media screen and (max-width: 768px) {
       right: 10px;
     }
