--- a/scss/skills_stacks_section.scss
+++ b/scss/skills_stacks_section.scss
@@ -8,12 +8,19 @@ div#skills_and_stacks_wrapper {
     #skill {
       color: black;
     }
-    .ss_title_svg {
-      // transform: scaleX(-1);
-      stroke-dasharray: 30;
-    }
   }
 }
+
+.ss_title_svg {
+  position: relative;
+  right: -300px;
+  transition: right 1s ease-in-out;
+}
+
+.ss_title_svg.animate {
+  right: 0;
+}
+
 
 // 카테고리 명
 p.skill_category {
