add image and fix

--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -263,21 +263,11 @@ ul.project_list {
       background-size: contain;
     }
     &:nth-child(5) {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-around;
-      align-content: center;
-      background: #dadada;
+      background: url('/images/project_list_05.png') center center no-repeat;
       background-size: contain;
     }
     &:nth-child(6) {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-around;
-      align-content: center;
-      background: #dadada;
+      background: url('/images/project_list_06.png') center center no-repeat;
       background-size: contain;
     }
   }
