--- a/scss/contact_footer.scss
+++ b/scss/contact_footer.scss
@@ -102,6 +102,10 @@ div#content {
     }
     &.cf_email_title {
       margin-bottom: 1rem;
+      position: absolute;
+      left: 50%;
+      top: 2%;
+      transform: translateX(-50%);
     }
     &.cf_email_text span {
       transition: all 0.1s ease-out;
@@ -113,6 +117,10 @@ div#content {
       color: gray;
       font: normal 1rem "Noto sans KR";
       margin-top: 1rem;
+      position: absolute;
+      left: 50%;
+      bottom: 2rem;
+      transform: translateX(-50%);
     }
     &.c_big_font {
       font: normal 1.8rem "Noto sans KR";
@@ -251,7 +259,7 @@ div#content {
         font: normal 1rem "Noto sans KR";
         position: absolute;
         left: 50%;
-        bottom: 2em;
+        bottom: 2rem;
         transform: translateX(-50%);
       }
       &.c_big_font {
