--- a/scss/main_section.scss
+++ b/scss/main_section.scss
@@ -102,80 +102,80 @@ div.running_osung_wrapper {
   height: 500px;
   transition: all 0.5s ease-out;
 }
-// div.running_osung_wrapper {
-//   position: absolute;
-//   top: 15px;
-//   animation-name: moving;
-//   animation-duration: 3s;
-//   animation-iteration-count: infinite;
-//   animation-timing-function: linear;
-//   .me {
-//   background-image: url('/images/running.png');
-//   background-repeat: no-repeat;
-//   display: block;
-//   width: 300px;
-//   height: 500px;
-//   animation-name: running;
-//   animation-duration: 1s;
-//   animation-iteration-count: infinite;
-//   animation-timing-function: steps(1);
-//   background-position-y: 0;
-//   zoom: 0.5;
-//   // -moz-transform: scale(1.5);
-//   // transform: scale(1.5);
-//   // -moz-transform-origin: 151px 0;
-//   // transform-origin: 151px 0;
-// }
+div.running_osung_wrapper {
+  position: absolute;
+  top: 15px;
+  animation-name: moving;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  .me {
+  background-image: url('/images/running.png');
+  background-repeat: no-repeat;
+  display: block;
+  width: 300px;
+  height: 500px;
+  animation-name: running;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: steps(1);
+  background-position-y: 0;
+  zoom: 0.5;
+  // -moz-transform: scale(1.5);
+  // transform: scale(1.5);
+  // -moz-transform-origin: 151px 0;
+  // transform-origin: 151px 0;
+}
 
-// }
+}
 
-// @keyframes moving {
-//   0% {
-//     left: -300px;
-//   }
-//   100% {
-//     left: 100vw;
-//   }
-// }
+@keyframes moving {
+  0% {
+    left: -300px;
+  }
+  100% {
+    left: 100vw;
+  }
+}
 
-// @keyframes running {
-//   0% {
-//     background-position-x: 0px;
-//   }
-//   9% {
-//     background-position-x: -300px;
-//   }
-//   18% {
-//     background-position-x: -600px;
-//   }
-//   27% {
-//     background-position-x: -900px;
-//   }
-//   36% {
-//     background-position-x: -1200px;
-//   }
-//   45% {
-//     background-position-x: -1500px;
-//   }
-//   54% {
-//     background-position-x: -1800px;
-//   }
-//   63% {
-//     background-position-x: -2100px;
-//   }
-//   72% {
-//     background-position-x: -2400px;
-//   }
-//   81% {
-//     background-position-x: -2700px;
-//   }
-//   90% {
-//     background-position-x: -3000px;
-//   }
-//   100% {
-//     background-position-x: -3300px;
-//   }
-// }
+@keyframes running {
+  0% {
+    background-position-x: 0px;
+  }
+  9% {
+    background-position-x: -300px;
+  }
+  18% {
+    background-position-x: -600px;
+  }
+  27% {
+    background-position-x: -900px;
+  }
+  36% {
+    background-position-x: -1200px;
+  }
+  45% {
+    background-position-x: -1500px;
+  }
+  54% {
+    background-position-x: -1800px;
+  }
+  63% {
+    background-position-x: -2100px;
+  }
+  72% {
+    background-position-x: -2400px;
+  }
+  81% {
+    background-position-x: -2700px;
+  }
+  90% {
+    background-position-x: -3000px;
+  }
+  100% {
+    background-position-x: -3300px;
+  }
+}
 
 
 .m_svg_1 {
