--- a/scss/header.scss
+++ b/scss/header.scss
@@ -23,7 +23,7 @@ header {
       float: left;
       div#logo {
         p {
-          font: normal 1.5rem/2rem "Permanent Marker";
+          font: normal 1.5rem/2rem "faster one";
           color: #003CFF;
         }
       }
@@ -51,28 +51,24 @@ header {
           position: relative;
           left: 0;
           top: 0;
+          z-index: 10;
           transition: all 0.2s ease-out;
+          img {
+            display: none;
+            position: absolute;
+            right: 2.5rem;
+            top: 0.1rem;
+            z-index: -1;
+            transition: all 0.3s ease-out;
+          }
           &.selected {
             color: white;
-          }
-          .svg_line {
-            width: 200px;
-            height: 20px;
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: auto;
-            background: url('/images/headermenu-svg-01.png');
+            img {
+              display: block;
+              right: -0.5rem;
+            }
           }
         }
-      }
-      svg {
-        position: absolute;
-        left: -2.5rem;
-        top: 0.4rem;
-        z-index: 0;
-        
       }
     }
   }
@@ -130,13 +126,6 @@ header {
               color: white;
             }
           }
-        }
-        svg {
-          width: 55%;
-          position: absolute;
-          left: -12%;
-          top: 0.2rem;
-          z-index: 0;
         }
       }
     }
