--- a/scss/main_section.scss
+++ b/scss/main_section.scss
@@ -90,23 +90,15 @@ div#main_wrapper {
 
 div.running_osung_wrapper {
   position: absolute;
-  top: 15px;
-  // left: -300px;
-}
-
-.me {
-  background-image: url('/images/running.png');
-  background-repeat: no-repeat;
-  display: block;
-  width: 300px;
-  height: 500px;
-  transition: all 0.5s ease-out;
-}
-div.running_osung_wrapper {
-  position: absolute;
-  top: 15px;
+  top: 0rem;
+  @media screen and (max-width: 768px) {
+    top: 13rem;
+  }
   animation-name: moving;
   animation-duration: 4s;
+  @media screen and (max-width: 768px) {
+    animation-duration: 2s;
+  }
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   .me {
@@ -117,10 +109,14 @@ div.running_osung_wrapper {
   height: 500px;
   animation-name: running;
   animation-duration: 1s;
+  @media screen and (max-width: 768px) {
+    animation-duration: 0.6s;
+  }
   animation-iteration-count: infinite;
   animation-timing-function: steps(1);
   background-position-y: 0;
   zoom: 0.5;
+  // transition: all 0.5s ease-out;
   // -moz-transform: scale(1.5);
   // transform: scale(1.5);
   // -moz-transform-origin: 151px 0;
