--- a/scss/header.scss
+++ b/scss/header.scss
@@ -23,8 +23,9 @@ header {
       float: left;
       div#logo {
         p {
-          font: normal 1.5rem/2rem "faster one";
           color: #003CFF;
+          font: normal 1.5rem/1.9rem "faster one";
+          text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
         }
       }
     }
@@ -47,6 +48,7 @@ header {
         z-index: 1;
         li {
           font: normal 1rem "Dela Gothic One";
+          // text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
           cursor: pointer;
           position: relative;
           left: 0;
@@ -63,6 +65,7 @@ header {
           }
           &.selected {
             color: white;
+            text-shadow: none;
             img {
               display: block;
               right: -0.5rem;
