--- a/scss/header.scss
+++ b/scss/header.scss
@@ -62,6 +62,12 @@ header {
             top: 0.1rem;
             z-index: -1;
             transition: all 0.3s ease-out;
+            @media screen and (max-width: 768px) {
+              width: 130%;
+              height: 100%;
+              top: 0.1rem;
+            }
+            
           }
           &.selected {
             color: white;
