--- a/scss/header.scss
+++ b/scss/header.scss
@@ -108,7 +108,7 @@ header {
         float: left;
         div#logo {
           p {
-            font: normal 1.5rem/2rem "Permanent Marker";
+            font: normal 1.5rem/2rem "faster one";
             color: #003CFF;
           }
         }
