--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -106,14 +106,12 @@ div.project_infos {
   margin-top: 1rem;
   float: left;
   @extend %positionRelative;
-
   @media screen and (max-width: 768px) {
     width: 100%;
     height: 21rem;
     margin-left: 0;
     margin-top: 2rem;
   }
-  
   .p_name {
     color: white;
     font: bold 1.875rem "Noto sans KR";
@@ -227,8 +225,8 @@ ul.project_list {
   @media screen and (max-width: 768px) {
     margin-left: calc(50vw - 12.5rem);
   }
-  
   li {
+    transform: translateY(-70px);
     width: 25rem;
     height: 15.45rem;
     border-radius: 25px;
@@ -238,6 +236,8 @@ ul.project_list {
     opacity: 0.8;
     cursor: pointer;
     transition: all 0.4s ease-out;
+    opacity: 0;
+
     &:hover {
       box-shadow: 4px 4px 16px 7px rgba(0, 0, 0, 0.3);
     }
