--- a/scss/skills_stacks_section.scss
+++ b/scss/skills_stacks_section.scss
@@ -15,7 +15,7 @@ div#skills_and_stacks_wrapper {
 .ss_title_svg {
   position: relative;
   right: -300px;
-  right: 0px;
+  // right: 0px;
   transition: right 1s ease-in-out;
 }
 
