--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -68,6 +68,7 @@ div.project_main_pic {
   top: 0;
   @media screen and (max-width: 768px) {
     width: 100%;
+    max-width: 400px;
     height: auto;
   }
   &:hover > img {
@@ -108,10 +109,14 @@ div.project_infos {
   @extend %positionRelative;
   @media screen and (max-width: 768px) {
     width: 100%;
-    height: 21rem;
+    height: 18rem;
     margin-left: 0;
     margin-top: 2rem;
   }
+  @media screen and (max-width: 486px) {
+    height: 21rem;
+  }
+  
   .p_name {
     color: white;
     font: bold 1.875rem "Noto sans KR";
