--- a/scss/skills_stacks_section.scss
+++ b/scss/skills_stacks_section.scss
@@ -13,15 +13,17 @@ div#skills_and_stacks_wrapper {
 }
 
 .ss_title_svg {
+  width: 27rem;
   position: relative;
   right: -300px;
   // right: 0px;
-  transition: right 1s ease-in-out;
+  opacity: 0;
+  transition: all 1.5s ease-in-out;
 }
 
-.ss_title_svg.animate {
-  right: 0;
-}
+// .ss_title_svg.animate {
+//   right: 0;
+// }
 
 
 // 카테고리 명
