--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -261,27 +261,27 @@ ul.project_list {
       opacity: 0;
     }
     &:nth-child(1) {
-      background: url('/images/project_list_01.png') center center no-repeat;
+      background: url('/images/project_list_01.webp') center center no-repeat;
       background-size: contain;
     }
     &:nth-child(2) {
-      background: url('/images/project_list_02.png') center center no-repeat;
+      background: url('/images/project_list_02.webp') center center no-repeat;
       background-size: contain;
     }
     &:nth-child(3) {
-      background: url('/images/project_list_03.png') center center no-repeat;
+      background: url('/images/project_list_03.webp') center center no-repeat;
       background-size: contain;
     }
     &:nth-child(4) {
-      background: url('/images/project_list_04.png') center center no-repeat;
+      background: url('/images/project_list_04.webp') center center no-repeat;
       background-size: contain;
     }
     &:nth-child(5) {
-      background: url('/images/project_list_05.png') center center no-repeat;
+      background: url('/images/project_list_05.webp') center center no-repeat;
       background-size: contain;
     }
     &:nth-child(6) {
-      background: url('/images/project_list_06.png') center center no-repeat;
+      background: url('/images/project_list_06.webp') center center no-repeat;
       background-size: contain;
     }
   }
